# TBC-Tools

./: .gitignore  CMakeLists.txt  CMakePresets.json  tbcs
TBC-Tools/: CMakeLists.txt  TBC-IVTC.cpp  TBC-IVTC.h  TBC-Tools.cpp  TBC-Tools.h
